# Starstruck

./: .gitignore
backend/: README.md  pyproject.toml  verify_coach.py
backend/app/: main.py  models.py
backend/app/graph/: coach.py  state.py  workflow.py
